<resources>
    <string name="app_name">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="temp_unit">°</string>
    <string name="now_tmp">当前温度（摄氏度）</string>
    <string name="now_feel_temp">体感温度</string>
    <string name="now_wind">风力状况</string>
    <string name="now_wind_spd">风速（Kmph）</string>
    <string name="now_wind_spd_level">风力等级</string>
    <string name="now_cond">天气状况</string>
    <string name="now_desc">天气描述</string>
    <string name="now_hum">湿度（%）</string>
    <string name="now_pres">气压</string>

    <string name="dress_index">穿衣指数</string>
    <string name="uv_index">紫外线指数</string>
    <string name="warsh_car_index">洗车指数</string>
    <string name="travel_index">旅游指数</string>
    <string name="flu_index">感冒指数</string>
    <string name="sport_index">运动指数</string>

    <string name="sunrise">日出：</string>
    <string name="sunset">日落：</string>
    <string name="rain_probablity">降雨概率：</string>
    <string name="humidity">湿度：</string>
    <string name="wind_speed">风速：</string>
    <string name="feel_temp">体感温度：</string>
    <string name="precipitation">降水量：</string>
    <string name="atmo_press">气压：</string>
    <string name="air_visiblity">能见度：</string>
</resources>
