<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/backgroud">

        <TextView
            android:id="@+id/weather_brief_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/weather_city_name_size"
            android:layout_margin="@dimen/weather_city_name_margin"
            android:text="南京市"/>

        <TextView
            android:id="@+id/weather_brief_cond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/weather_cond_size"
            android:layout_margin="@dimen/weather_cond_margin"
            android:text="晴转多云"/>

        <TextView
            android:id="@+id/weather_brief_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/weather_temp_size"
            android:layout_margin="@dimen/weather_temp_margin"
            android:text="38"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/weather_today_height">
            <TextView
                android:id="@+id/weather_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/weather_today_margin"
                android:textSize="@dimen/weather_today_size"
                android:text="星期几"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/weather_today"
                android:layout_margin="@dimen/weather_today_margin"
                android:textSize="@dimen/weather_today_size"
                android:text="今天"/>

            <TextView
                android:id="@+id/weather_today_low_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/weather_today_margin"
                android:textSize="@dimen/weather_today_size"
                android:text="26"/>

            <TextView
                android:id="@+id/weather_today_high_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/weather_today_low_temp"
                android:layout_margin="@dimen/weather_today_margin"
                android:textSize="@dimen/weather_today_size"
                android:text="38"/>
        </RelativeLayout>

        <include layout="@layout/divider" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/hour_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/weather_hour_detail_height"/>

        <include layout="@layout/divider" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/daily_detail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/weather_day_height"/>

        <include layout="@layout/divider" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/weather_today_suggestion"
            android:layout_width="match_parent"
            android:layout_height="@dimen/weather_today_sugg_height"/>

        <include layout="@layout/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/sunrise"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/sunset"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/rain_probablity"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/humidity"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/wind_speed"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/feel_temp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/precipitation"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/atmo_press"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/air_visiblity"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.05"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sunrise_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/sunrise"/>

                <TextView
                    android:id="@+id/sunset_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/sunset"/>

                <TextView
                    android:id="@+id/rain_probablity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/rain_probablity"/>

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/humidity"/>

                <TextView
                    android:id="@+id/wind_speed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/wind_speed"/>

                <TextView
                    android:id="@+id/feel_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/feel_temp"/>

                <TextView
                    android:id="@+id/precipitation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/precipitation"/>

                <TextView
                    android:id="@+id/atmo_press"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/atmo_press"/>

                <TextView
                    android:id="@+id/air_visiblity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textSize="@dimen/weather_today_detail_size"
                    android:layout_margin="@dimen/weather_today_detail_margin"
                    android:text="@string/air_visiblity"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>